# aws-advanced-python-wrapper

./: CHANGELOG.md  CLAUDE.local.md  README.md  mypy.ini  pyproject.toml
.claude/plans/: 2026-04-19-sqlalchemy-creator-and-py314-f1-plan.md  2026-04-19-sqlalchemy-dialects-f2-plan.md  2026-04-20-async-parity-overview.md  2026-04-20-phase-a-async-plugin-service-foundation.md  2026-04-21-phase-b-async-failover-v2-parity.md  2026-04-21-phase-c-async-efm-standing-watchdog.md  2026-04-21-phase-d-async-aurora-connection-tracker.md  2026-04-21-phase-e-async-auth-plugins-parity.md  2026-04-21-phase-f-async-rws-parity.md  2026-04-21-phase-g-async-topology-monitor.md  2026-04-21-phase-h-async-plugin-registry-expansion.md  2026-04-21-phase-i-cleanups.md  2026-04-22-async-parity-audit.md  2026-04-22-phase-k-o-async-parity-completion.md
.claude/specs/: 2026-04-19-f3-native-async-master-spec.md  2026-04-19-sqlalchemy-creator-and-py314-f1-design.md  2026-04-19-sqlalchemy-dialects-f2-design.md  2026-04-20-f3b-sp0-architecture-decisions.md  2026-04-20-post-3.0-followups-roadmap.md  2026-04-20-task1-plugin-registry-custom-endpoint-saml.md  2026-04-20-task2-async-mysql-drivers.md  2026-04-20-task4-integration-tests-live-aurora.md
.github/workflows/: integration_tests.yml  main.yml
aws_advanced_python_wrapper/: __init__.py  aurora_connection_tracker_plugin.py  connection_provider.py  custom_endpoint_plugin.py  errors.py  federated_plugin.py  mysql_connector.py  mysql_driver_dialect.py  okta_plugin.py  psycopg.py  sql_alchemy_connection_provider.py  wrapper.py
aws_advanced_python_wrapper/aio/: __init__.py  aiomysql.py  aurora_connection_tracker.py  aurora_initial_connection_strategy_plugin.py  auth_plugins.py  blue_green_plugin.py  cleanup.py  cluster_topology_monitor.py  connection_provider.py  custom_endpoint_monitor.py  default_plugin.py  dialect_utils.py  failover_plugin.py  fastest_response_strategy_plugin.py  federated_auth_plugins.py  host_list_provider.py  host_monitoring_plugin.py  idp_registry.py  limitless_plugin.py  minor_plugins.py  plugin.py  plugin_factory.py  plugin_manager.py  plugin_service.py  pooled_connection_provider.py  psycopg.py  read_write_splitting_plugin.py  session_state.py  simple_read_write_splitting_plugin.py  stale_dns_plugin.py  stub_plugins.py  wrapper.py
aws_advanced_python_wrapper/resources/: aws_advanced_python_wrapper_messages.properties
aws_advanced_python_wrapper/sqlalchemy_dialects/: __init__.py  mysql.py  mysql_async.py  pg.py  pg_async.py
aws_advanced_python_wrapper/utils/: iam_utils.py  properties.py  services_container.py
docs/: README.md
docs/development-guide/: DevelopmentGuide.md  IntegrationTests.md
docs/examples/: MySQLSQLAlchemyAsyncFailover.py  MySQLSQLAlchemyFailover.py  PGSQLAlchemyAsyncFailover.py  PGSQLAlchemyFailover.py
docs/using-the-python-wrapper/: SqlAlchemySupport.md
tests/unit/: conftest.py  test_aio_aiomysql.py  test_aio_aurora_connection_tracker.py  test_aio_aurora_initial_connection.py  test_aio_auth_plugins.py  test_aio_blue_green_monitor.py  test_aio_blue_green_plugin.py  test_aio_cleanup.py  test_aio_connection_provider.py  test_aio_contracts.py  test_aio_custom_endpoint.py  test_aio_dialect_utils.py  test_aio_failover_plugin.py  test_aio_fastest_response.py  test_aio_fastest_response_monitor.py  test_aio_federated_okta.py  test_aio_global_aurora_host_list_provider.py  test_aio_host_list_provider.py  test_aio_host_list_provider_autodetect.py  test_aio_host_list_provider_monitor_wiring.py  test_aio_host_monitoring_plugin.py  test_aio_idp_registry.py  test_aio_limitless_monitor.py  test_aio_limitless_plugin.py  test_aio_minor_plugins.py  test_aio_multi_alias_tracker.py  test_aio_multi_az_host_list_provider.py  test_aio_plugin_factory.py  (+28 more)
(+43 files in other folders)
