[project]
name = "aws_advanced_python_wrapper"
version = "3.0.0"
description = "Amazon Web Services (AWS) Advanced Python Wrapper"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Amazon Web Services" }]
requires-python = ">=3.10,<4.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["dependencies"]

[project.urls]
Repository = "https://github.com/awslabs/aws-advanced-python-wrapper"
Documentation = "https://github.com/awslabs/aws-advanced-python-wrapper/docs/"

[project.entry-points."sqlalchemy.dialects"]
aws_wrapper_postgresql = "aws_advanced_python_wrapper.sqlalchemy_dialects.pg:AwsWrapperPGPsycopgDialect"
"aws_wrapper_postgresql.psycopg" = "aws_advanced_python_wrapper.sqlalchemy_dialects.pg:AwsWrapperPGPsycopgDialect"
aws_wrapper_postgresql_async = "aws_advanced_python_wrapper.sqlalchemy_dialects.pg_async:AwsWrapperPGPsycopgAsyncDialect"
"aws_wrapper_postgresql.psycopg_async" = "aws_advanced_python_wrapper.sqlalchemy_dialects.pg_async:AwsWrapperPGPsycopgAsyncDialect"
aws_wrapper_mysql = "aws_advanced_python_wrapper.sqlalchemy_dialects.mysql:AwsWrapperMySQLConnectorDialect"
"aws_wrapper_mysql.mysqlconnector" = "aws_advanced_python_wrapper.sqlalchemy_dialects.mysql:AwsWrapperMySQLConnectorDialect"
aws_wrapper_mysql_async = "aws_advanced_python_wrapper.sqlalchemy_dialects.mysql_async:AwsWrapperMySQLAiomysqlAsyncDialect"
"aws_wrapper_mysql.aiomysql_async" = "aws_advanced_python_wrapper.sqlalchemy_dialects.mysql_async:AwsWrapperMySQLAiomysqlAsyncDialect"

[tool.poetry]
include = ["CONTRIBUTING.md"]

[tool.poetry.dependencies]
python = "^3.10.0"
resourcebundle = "2.1.0"
boto3 = "^1.42.91"
toml = "^0.10.2"
aws-xray-sdk = "^2.15.0"
types_aws_xray_sdk = "^2.13.0"
opentelemetry-api = "^1.41.0"
opentelemetry-sdk = "^1.41.0"
requests = "^2.33.1"
boto3-stubs = ">=1.42.91,<1.43.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.20.1"
flake8 = ">=7.3.0,<8"
flake8-type-checking = ">=3.2.0,<4.0"
isort = "^5.13.2"
pep8-naming = ">=0.15.1,<0.16.0"
SQLAlchemy = "^2.0.49"
psycopg = "^3.3.3"
psycopg-binary = "^3.3.3"
mysql-connector-python = "^9.6.0"
django = "^5.2.13"
django-stubs = "^5.2.9"
aiomysql = ">=0.2"
aiohttp = ">=3"

[tool.poetry.group.test.dependencies]
boto3 = "^1.42.91"
types-boto3 = "^1.42.91"
coverage = "^7.13.5"
debugpy = "^1.8.20"
pydevd-pycharm = "^233.15619.17"
pytest = "^7.4.4"
pytest-mock = "^3.15.1"
pytest-html = "^4.2.0"
pytest-html-merger = ">=0.1.0,<0.1.1"
toxiproxy-python = "^0.1.1"
parameterized = "^0.9.0"
tabulate = ">=0.10.0,<0.11"
psycopg = "^3.3.3"
psycopg-binary = "^3.3.3"
mysql-connector-python = "^9.6.0"
opentelemetry-exporter-otlp = "^1.41.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.41.0"
opentelemetry-sdk-extension-aws = "^2.1.0"
pytest-timeout = "^2.4.0"
pytest-repeat = "^0.9.4"
greenlet = ">=3"

[tool.isort]
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
no_lines_before = "LOCALFOLDER"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:cache could not write path',
    'ignore:could not create cache path',
    'ignore:Exception during reset or similar:pytest.PytestUnhandledThreadExceptionWarning'
]
